# saying_hello

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/say_hello/: say_hello.py
src/saying_hello/: __init__.py  saying_hello.py
tests/: test_saying_hello.py
